Database config / middleware checktoken / route api/users

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "Ivan Santa",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3"
   }
 }
